expr/partiql/y.output

state 0
	$accept: .query $end 
	maybe_cte_bindings: .    (6)

	WITH  shift 4
	.  reduce 6 (src line 130)

	query  goto 1
	maybe_cte_bindings  goto 2
	cte_bindings  goto 3

state 1
	$accept:  query.$end 

	$end  accept
	.  error


state 2
	query:  maybe_cte_bindings.SELECT maybe_distinct binding_list maybe_into from_expr where_expr group_expr having_expr order_expr limit_expr offset_expr

	SELECT  shift 5
	.  error


state 3
	maybe_cte_bindings:  cte_bindings.    (5)
	cte_bindings:  cte_bindings.',' identifier AS '(' select_stmt ')' 

	','  shift 6
	.  reduce 5 (src line 129)


state 4
	cte_bindings:  WITH.identifier AS '(' select_stmt ')' 

	ID  shift 8
	.  error

	identifier  goto 7

state 5
	query:  maybe_cte_bindings SELECT.maybe_distinct binding_list maybe_into from_expr where_expr group_expr having_expr order_expr limit_expr offset_expr
	maybe_distinct: .    (27)

	DISTINCT  shift 10
	.  reduce 27 (src line 177)

	maybe_distinct  goto 9

state 6
	cte_bindings:  cte_bindings ','.identifier AS '(' select_stmt ')'

	ID  shift 8
	.  error

	identifier  goto 11

state 7
	cte_bindings:  WITH identifier.AS '(' select_stmt ')'

	AS  shift 12
	.  error


state 8
	identifier:  ID.    (117)

	.  reduce 117 (src line 522)


state 9
	query:  maybe_cte_bindings SELECT maybe_distinct.binding_list maybe_into from_expr where_expr group_expr having_expr order_expr limit_expr offset_expr

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	'*'  shift 16
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 15
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39
	binding_list  goto 13
	value_binding  goto 14

state 10
	maybe_distinct:  DISTINCT.    (26)

	.  reduce 26 (src line 176)


state 11
	cte_bindings:  cte_bindings ',' identifier.AS '(' select_stmt ')'

	AS  shift 54
	.  error


state 12
	cte_bindings:  WITH identifier AS.'(' select_stmt ')'

	'('  shift 55
	.  error


state 13
	query:  maybe_cte_bindings SELECT maybe_distinct binding_list.maybe_into from_expr where_expr group_expr having_expr order_expr limit_expr offset_expr
	binding_list:  binding_list.',' value_binding 
	maybe_into: .    (4)

	INTO  shift 58
	','  shift 57
	.  reduce 4 (src line 127)

	maybe_into  goto 56

state 14
	binding_list:  value_binding.    (93)

	.  reduce 93 (src line 472)


state 15
	value_binding:  expr.AS identifier 
	value_binding:  expr.identifier 
	value_binding:  expr.    (11)
	expr:  expr.IN '(' select_stmt ')' 
	expr:  expr.IN '(' value_list ')' 
	expr:  expr.'|' expr
	expr:  expr.'^' expr
	expr:  expr.'&' expr
	expr:  expr.SHIFT_LEFT_LOGICAL expr
	expr:  expr.SHIFT_RIGHT_LOGICAL expr
	expr:  expr.SHIFT_RIGHT_ARITHMETIC expr
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.CONCAT expr 
	expr:  expr.APPEND expr
	expr:  expr.ILIKE STRING 
	expr:  expr.LIKE STRING 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.LT expr 
	expr:  expr.LE expr 
	expr:  expr.GT expr 
	expr:  expr.GE expr 
	expr:  expr.BETWEEN datum_or_parens AND datum_or_parens 
	expr:  expr.NOT LIKE STRING 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.IS NULL 
	expr:  expr.IS NOT NULL 
	expr:  expr.IS MISSING 
	expr:  expr.IS NOT MISSING 
	expr:  expr.IS TRUE 
	expr:  expr.IS NOT TRUE 
	expr:  expr.IS FALSE
	expr:  expr.IS NOT FALSE

	AS  shift 59
	ID  shift 8
	OR  shift 86
	AND  shift 85
	NOT  shift 84
	BETWEEN  shift 83
	EQ  shift 77
	NE  shift 78
	LT  shift 79
	LE  shift 80
	GT  shift 81
	GE  shift 82
	ILIKE  shift 75
	LIKE  shift 76
	IN  shift 61
	IS  shift 87
	'|'  shift 62
	'^'  shift 63
	'&'  shift 64
	SHIFT_LEFT_LOGICAL  shift 65
	SHIFT_RIGHT_ARITHMETIC  shift 67
	SHIFT_RIGHT_LOGICAL  shift 66
	'+'  shift 68
	'-'  shift 69
	'*'  shift 70
	'/'  shift 71
	'%'  shift 72
	CONCAT  shift 73
	APPEND  shift 74
	.  reduce 11 (src line 141)

	identifier  goto 60

state 16
	value_binding:  '*'.    (12)

	.  reduce 12 (src line 142)


state 17
	expr:  datum_or_parens.    (28)

	.  reduce 28 (src line 180)


state 18
	expr:  COUNT.'(' '*' ')'
	expr:  COUNT.'(' DISTINCT expr ')'
	expr:  COUNT.'(' expr ')'

	'('  shift 88
	.  error


state 19
	expr:  SUM.'(' expr ')'

	'('  shift 89
	.  error


state 20
	expr:  MIN.'(' expr ')'

	'('  shift 90
	.  error


state 21
	expr:  MAX.'(' expr ')'

	'('  shift 91
	.  error


state 22
	expr:  AVG.'(' expr ')'

	'('  shift 92
	.  error


state 23
	expr:  BIT_AND.'(' expr ')'

	'('  shift 93
	.  error


state 24
	expr:  BIT_OR.'(' expr ')'

	'('  shift 94
	.  error


state 25
	expr:  BIT_XOR.'(' expr ')'

	'('  shift 95
	.  error


state 26
	expr:  BOOL_AND.'(' expr ')'

	'('  shift 96
	.  error


state 27
	expr:  BOOL_OR.'(' expr ')'

	'('  shift 97
	.  error


state 28
	expr:  EARLIEST.'(' expr ')'

	'('  shift 98
	.  error


state 29
	expr:  LATEST.'(' expr ')'

	'('  shift 99
	.  error


state 30
	expr:  CASE.case_limbs case_optional_else END

	WHEN  shift 101
	.  error

	case_limbs  goto 100

state 31
	expr:  COALESCE.'(' value_list ')'

	'('  shift 102
	.  error


state 32
	expr:  NULLIF.'(' expr ',' expr ')'

	'('  shift 103
	.  error


state 33
	expr:  CAST.'(' expr AS ID ')'

	'('  shift 104
	.  error


state 34
	expr:  DATE_ADD.'(' ID ',' expr ',' expr ')'

	'('  shift 105
	.  error


state 35
	expr:  DATE_DIFF.'(' ID ',' expr ',' expr ')'

	'('  shift 106
	.  error


state 36
	expr:  DATE_TRUNC.'(' ID ',' expr ')'

	'('  shift 107
	.  error


state 37
	expr:  EXTRACT.'(' ID FROM expr ')'

	'('  shift 108
	.  error


state 38
	expr:  UTCNOW.'(' ')'

	'('  shift 109
	.  error


state 39
	path_expression:  identifier.path_component
	expr:  identifier.'(' ')'
	expr:  identifier.'(' value_list ')'
	path_component: .    (113)

	'('  shift 111
	'['  shift 113
	'.'  shift 112
	.  reduce 113 (src line 510)

	path_component  goto 110

state 40
	expr:  EXISTS.'(' select_stmt ')'

	'('  shift 114
	.  error


state 41
	expr:  '-'.expr

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 115
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39

state 42
	expr:  NOT.expr

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 116
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39

state 43
	expr:  '~'.expr

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 117
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39

state 44
	datum_or_parens:  datum.    (22)

	.  reduce 22 (src line 168)


state 45
	datum_or_parens:  '('.parenthesized_expr ')'

	SELECT  shift 121
	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 120
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	parenthesized_expr  goto 118
	identifier  goto 39
	select_stmt  goto 119

state 46
	datum:  NUMBER.    (14)

	.  reduce 14 (src line 149)


state 47
	datum:  TRUE.    (15)

	.  reduce 15 (src line 150)


state 48
	datum:  FALSE.    (16)

	.  reduce 16 (src line 151)


state 49
	datum:  NULL.    (17)

	.  reduce 17 (src line 152)


state 50
	datum:  MISSING.    (18)

	.  reduce 18 (src line 153)


state 51
	datum:  STRING.    (19)

	.  reduce 19 (src line 154)


state 52
	datum:  ION.    (20)

	.  reduce 20 (src line 155)


state 53
	datum:  path_expression.    (21)

	.  reduce 21 (src line 156)


state 54
	cte_bindings:  cte_bindings ',' identifier AS.'(' select_stmt ')'

	'('  shift 122
	.  error


state 55
	cte_bindings:  WITH identifier AS '('.select_stmt ')'

	SELECT  shift 121
	.  error

	select_stmt  goto 123

state 56
	query:  maybe_cte_bindings SELECT maybe_distinct binding_list maybe_into.from_expr where_expr group_expr having_expr order_expr limit_expr offset_expr
	from_expr: .    (108)

	FROM  shift 126
	.  reduce 108 (src line 494)

	from_expr  goto 124
	lhs_from_expr  goto 125

state 57
	binding_list:  binding_list ','.value_binding

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	'*'  shift 16
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 15
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39
	value_binding  goto 127

state 58
	maybe_into:  INTO.path_expression

	ID  shift 8
	.  error

	path_expression  goto 128
	identifier  goto 129

state 59
	value_binding:  expr AS.identifier

	ID  shift 8
	.  error

	identifier  goto 130

state 60
	value_binding:  expr identifier.    (10)

	.  reduce 10 (src line 140)


state 61
	expr:  expr IN.'(' select_stmt ')'
	expr:  expr IN.'(' value_list ')'

	'('  shift 131
	.  error


state 62
	expr:  expr '|'.expr

	EXISTS  shift 40
	COUNT  shift 18
	MIN  shift 20
	MAX  shift 21
	SUM  shift 19
	AVG  shift 22
	BIT_AND  shift 23
	BIT_OR  shift 24
	BIT_XOR  shift 25
	BOOL_AND  shift 26
	BOOL_OR  shift 27
	COALESCE  shift 31
	NULLIF  shift 32
	EXTRACT  shift 37
	DATE_TRUNC  shift 36
	CAST  shift 33
	UTCNOW  shift 38
	DATE_ADD  shift 34
	DATE_DIFF  shift 35
	EARLIEST  shift 28
	LATEST  shift 29
	ID  shift 8
	'('  shift 45
	NULL  shift 49
	TRUE  shift 47
	FALSE  shift 48
	MISSING  shift 50
	'~'  shift 43
	NOT  shift 42
	CASE  shift 30
	'-'  shift 41
	NUMBER  shift 46
	ION  shift 52
	STRING  shift 51
	.  error

	expr  goto 132
	datum  goto 44
	datum_or_parens  goto 17
	path_expression  goto 53
	identifier  goto 39

state 63
	expr:  expr '^'.expr
